force-app/main/default/objects/Tour_Request__c/Tour_Request__c.object-meta.xml
<CustomObject>
    <label>Tour Request</label>
    <nameField>
        <label>Tour Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>