force-app/main/default/objects/Tour_Request__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Tour Requests</relationshipLabel>
    <relationshipName>Tour_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>