force-app/main/default/objects/Tour_Request__c/listViews/Tour_List_View.listView-meta.xml
<ListView>
    <fullName>Tour_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Tour List View</label>
</ListView>